--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -713,21 +713,49 @@ textarea:focus, input:focus {
     margin-bottom : 10px;
 }
 
+#trajetoria-de-desenvolvimento .trajetoria-detalhe .input-squared label:after {
+    font-family : "Glyphicons Halflings";
+    content     : "\e013";
+    background  : none;
+    top         : -3px;
+    left        : 0px;
+    font-size   : 12px;
+    font-weight : lighter;
+}
+
 #trajetoria-de-desenvolvimento .trajetoria-detalhe > div {
     margin  : 10px 0;
     padding : 0 10px;
 }
 
 #trajetoria-de-desenvolvimento .trajetoria-detalhe > div:first-child {
-    border-right : 1px solid #fff;
+
 }
 
 #trajetoria-de-desenvolvimento .trajetoria-detalhe > div:last-child {
-    border-left : 1px solid #fff;
+
+}
+
+#trajetoria-de-desenvolvimento .trajetoria-detalhe .date-choice span {
+    position   : absolute;
+    top        : 1px;
+    right      : 2px;
+    border     : 1px solid rgb(255, 255, 255);
+    padding    : 6px;
+    text-align : center;
+}
+
+#trajetoria-de-desenvolvimento .trajetoria-detalhe .date-choice input {
+    border     : 2px solid rgb(255, 255, 255);
+    box-shadow : none;
+}
+
+#trajetoria-de-desenvolvimento .trajetoria-detalhe .date-choice label {
+    position : relative;
 }
 
 #trajetoria-de-desenvolvimento .trajetoria {
-    border: 0 none;
+    border : 0 none;
 }
 
 #trajetoria-de-desenvolvimento .trajetoria thead {
@@ -741,6 +769,7 @@ textarea:focus, input:focus {
 #trajetoria-de-desenvolvimento .trajetoria thead tr td {
     border-right : 2px solid #fff;
     font-weight  : bold;
+    height       : 40px;
 }
 
 #trajetoria-de-desenvolvimento .trajetoria tbody {
@@ -1203,6 +1232,11 @@ textarea:focus, input:focus {
 
 .right-white-border {
     border-right : 1px solid #fff;
+}
+
+.side-white-border {
+    border-right : 1px solid #fff;
+    border-left  : 1px solid #fff;
 }
 
 .background-transparent {
