--- a/client/trajetoria/views/trajetoria-de-desenvolvimento.html
+++ b/client/trajetoria/views/trajetoria-de-desenvolvimento.html
@@ -1,5 +1,7 @@
 <div class="body-side-padding margin-top-30 space-footer background-blacked border-white">
 
+    <ng-include src="'client/barra-controle.html'"></ng-include>
+
     <div id="trajetoria-de-desenvolvimento">
 
         <h3 class="text-center">Trajetória de Desenvolvimento</h3>
